Bug 353686 Firefox crashes when gtk_key_theme (gconf) changes [@ nsLookAndFeel::InitColors] patch by ispiked@gmail.com r=dbaron sr=dbaron thanks to mclasen@redhat.com for the report